--- a/public/database.html
+++ b/public/database.html
@@ -83,6 +83,13 @@
                     </div>
 
                     <div class = 'form-group'>
+                        <label class="control-label col-sm-2" for = "book-pic">Picture:</label>
+                        <div class="col-sm-8">
+                            <input class = 'form-control' accept = 'image/*' type='file' id = 'book-pic' name = 'book-pic'>
+                        </div>
+                    </div>
+
+                    <div class = 'form-group'>
                         <div class="col-sm-offset-8 col-sm-2">
                         <button type = "button" class = "btn btn-success form-control" id = "add-book">Loading database</button>
                         </div>
