--- a/public/contact.html
+++ b/public/contact.html
@@ -57,9 +57,9 @@
                     <img src="img/img5.jpg" class="img-responsive" />
                     <h2>Nguyễn Văn Dũng</h2>
                     <h3>Hard Carry</h3>
-                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:90%">90%</div></h4>
-                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:90%">90%</div></h4>
-                    <h4>Presentation <div class="progress"><div class="progress-bar" style=" width:60%">60%</div></h4>
+                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:90%">9/10</div></h4>
+                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:90%">9/10</div></h4>
+                    <h4>Presentation <div class="progress"><div class="progress-bar" style=" width:60%">6/10</div></h4>
 
                 </div>
             </div>
@@ -69,9 +69,9 @@
                     <img src="img/img4.jpg" class="img-responsive" />
                     <h2>Trần Hải Dương</h2>
                     <h3>Leader</h3>
-                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:5%">5%</div></h4>
-                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:0%">0%</div></h4>
-                    <h4>Trashtalking <div class="progress"><div class="progress-bar" style=" width:100%">100%</div></h4>
+                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:5%">0,5/10</div></h4>
+                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:0%">0/10</div></h4>
+                    <h4>Trashtalking <div class="progress"><div class="progress-bar" style=" width:100%">10/10</div></h4>
 
                 </div>
             </div>
@@ -81,9 +81,9 @@
                     <img src="img/img6.jpg" class="img-responsive" />
                     <h2>Nguyễn Viết Chiến</h2>
                     <h3>Semi Carry</h3>
-                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:80%">80%</div></h4>
-                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:60%">60%</div></h4>
-                    <h4>Presentation <div class="progress"><div class="progress-bar" style=" width:90%">90%</div></h4>
+                    <h4>Coding <div class="progress"><div class="progress-bar" style=" width:80%">8/10</div></h4>
+                    <h4>Carrying <div class="progress"><div class="progress-bar" style=" width:60%">6/10</div></h4>
+                    <h4>Presentation <div class="progress"><div class="progress-bar" style=" width:90%">9/10</div></h4>
 
                 </div>
             </div>
@@ -158,8 +158,9 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Signing out of your account</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+
             </div>
             <div class="modal-body">
                 <p>Are you sure?</p>
