--- a/public/showbook.html
+++ b/public/showbook.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/aio.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
@@ -114,6 +115,7 @@
               </div>
           </div>
       </div>
+
       <!-- Sign up modal -->
       <div class="modal fade sign-up-modal" tabindex="-1" role="dialog" aria-labelledby="sign-up-modal" aria-hidden="true" id="sign-up-modal">
           <div class="modal-dialog">
@@ -168,41 +170,20 @@
           </div>
       </div>
 
-      <!-- Sign out modal -->
-      <div class="modal fade sign-out-modal" tabindex="-1" role="dialog" aria-labelledby="sign-out-modal" aria-hidden="true" id="sign-out-modal">
-          <div class="modal-dialog">
-
-              <!-- Modal content-->
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Signing out of your account</h4>
-                  </div>
-                  <div class="modal-body">
-                      <p>Are you sure?</p>
-                  </div>
-                  <div class="modal-footer">
-                      <button type="button" class="btn btn-default" id='accept-sign-out' data-dismiss="modal">Sign Out</button>
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-
       <!-- Book ordering modal -->
       <div class="modal fade book-order-modal" tabindex="-1" role="dialog" aria-labelledby="book-order-modal" aria-hidden="true" id="book-order-modal">
-          <div class="modal-dialog modal-lg">
+          <div class="modal-dialog modal-xl">
 
               <!-- Modal content-->
               <div class="modal-content">
                   <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal">&times;</button>
                       <h4 class="modal-title">Order</h4>
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
                   </div>
                   <div class="modal-body" id="order-modal-body">
                       <div class="row">
                           <div class="col-sm-6 col-lg-4 text-center">
-                              <img src="https://via.placeholder.com/240x300">
+                              <img id = "modal-book-pic" width="240" height="427" src="https://via.placeholder.com/240x300">
                           </div>
                           <div class="col-sm-5 col-lg-8">
                               <div class="row">
@@ -254,21 +235,17 @@
       <script src="/__/firebase/init.js"></script>
       <script type="text/javascript" src="js/aio.js"></script>
       <script type="text/javascript" src="js/showbook.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+
+      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
       <script>
-          $(document).ready(function () {
-              var date_input = $('input[name="borrow-date"]'); //our date input has the name "date"
-              var container = $('.bootstrap-iso form').length > 0 ? $('.bootstrap-iso form').parent() : "body";
-              var options = {
-                  format: 'dd/mm/yyyy',
-                  container: container,
-                  todayHighlight: true,
-                  autoclose: true,
-                  minDate: 0,
-              };
-              date_input.datepicker(options);
-          })
+
+          $( function() {
+            $( "#borrow-date" ).datepicker({
+              minDate: "+0d"
+            });
+          } );
       </script>
   </body>
 </html>
